--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs-jetpack": "^0.7.0",
     "gulp": "^3.9.0",
     "gulp-typescript": "^2.10.0",
+	"promise": "^7.1.1",
     "q": "^1.4.1",
     "rcedit": "^0.3.0"
   }
